--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </script>
   </head>
   <body>
-    <h1>Hello from My HTML Website</h1>
+    <h1>new HTML Website</h1>
     <p>This site is now tracking with Google Analytics 4!</p>
     <script src="script.js"></script>
   </body>
