--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- Google tag (gtag.js) -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-"
+      src="https://www.googletagmanager.com/gtag/js?id=G-1E1HXTLXEG"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
@@ -21,7 +21,7 @@
       }
       gtag("js", new Date());
 
-      gtag("config", "G-");
+      gtag("config", "G-1E1HXTLXEG");
     </script>
   </head>
   <body>
